--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <p>
 	Roadmap<br/>
 	<ul>
-		<li>Get this sweet, sweet site into a public repo so that anyone can copy or contribute</li>
+		<li>Change hosting from S3 to Amplify</li>
+		<li><span style="text-decoration: line-through;"> Put this sweet, sweet site into a public repo so that anyone can copy or contribute</span></li>
 	</ul>
 </p>
 </html>
