--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <p>
 	Roadmap<br/>
 	<ul>
-		<li>Change hosting from S3 to Amplify</li>
-		<li><span style="text-decoration: line-through;"> Put this sweet, sweet site into a public repo so that anyone can copy or contribute</span></li>
+		<li>Let's get some color and whatnot</li>
+		<li><span style="text-decoration: line-through;">Change hosting from S3 to Amplify</span></li>
+		<li><span style="text-decoration: line-through;">Put this sweet, sweet site into a public repo so that anyone can copy or contribute</span></li>
 	</ul>
 </p>
 </html>
