Cleaned up duplicate links

--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
           <div class="navbar-collapse collapse show" >
             <ul class="ms-md-auto navbar-nav">
               <li class="nav-item">
-                <a href="/collections/genesis/browse" class="nav-link" disabled>Gensis Worms</a>
-              </li>
-              <li class="nav-item">
                 <a href="/collections" class="nav-link">Collections</a>
               </li>
-              <button class="btn btn-primary text-nowrap">
-                Connect MetaMask
-              </button>
+              <li class="nav-item">
+                <button class="btn btn-primary text-nowrap">
+                  Connect MetaMask
+                </button>
+              </li>
             </ul>
           </div>
         </div>
@@ -41,14 +40,6 @@
           <div class="row mb-1">
             <div class="col-md-4 offset-md-8">
               <div class="input-group">
-                <!-- <input readonly
-                  type="text"
-                  class="form-control rounded-pill"
-                  placeholder="Search By Worm #"
-                  aria-label="search"
-                  aria-describedby="search"
-                  oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');"
-                /> -->
                 <input type="text" class="form-control rounded-20" placeholder="Search By Worm #" aria-label="search" aria-describedby="search" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');">
                 <span class="input-group-text rounded-20 hover-pointer" id="search"><i class="fas fa-search"></i></span>
               </div>
@@ -60,15 +51,6 @@
         <div>
           <div class="container">
             <div class="row align-items-center">
-              <!-- <div class="col-12 col-md-5 col-lg-6 order-md-2 order-xs-1">
-                <img
-                  src="/img/hero-gif.gif"
-                  class="rounded-20 img-fluid"
-                  alt="..."
-                  data-aos="fade-up"
-                  data-aos-delay="100"
-                />
-              </div> -->
               <div class="grid-container col-12 col-md-5 col-lg-6 order-md-2 order-xs-1">
                 <div class="grid-item"><img src="/img/genesis/md/0.png"></div>
                 <div class="grid-item"><img src="/img/genesis/md/1.png"></div>
@@ -97,44 +79,14 @@
                   Each is unique. Some are mean. Some are cool. Some are silly.
                   All are Worms so... they're just weird.<br /><br />
                   <strong
-                    >The first 1/1 NFT collection minted on
-                    <a href="https://mtv.ac/" target="_blank">MultiVAC</a
-                    >.</strong
+                    >The first 1/1 NFT collection minted on MultiVAC.</strong
                   >
                 </p>
-                <div class="text-center text-md-start">
-                  <button class="btn btn-outline-primary lift shadow">The Worms</button>
-                  <button class="btn btn-outline-primary lift shadow">
-                    The Attributes
-                  </button>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div id="overall-stats" class="svelte-100nher">
-          <div class="container">
-            <div class="narrow-container svelte-100nher">
-              <div class="row">
-                <div class="col"><h2 class="">Overall Stats</h2></div>
-              </div>
-              <div class="row mt-3">
-                <div class="col">
-                  <p class="lead">
-                    Worms For Sale: <strong>0</strong>
-                  </p>
-                  <p class="lead">
-                    Number of Owners: <strong>376</strong>
-                  </p>
-                </div>
-                  
-                </div>
-              </div>
-              <div class="row mt-3"></div>
-            </div>
-          </div>
-        </div>
-
       <footer class="text-center text-lg-start bg-dark-2 text-high-emphasis">
         <section class="p-4">
           <div class="container text-center text-md-start mt-5">
