Added pages and updated CSS

--- a/faq.html
+++ b/faq.html
@@ -36,45 +36,42 @@
         </div>
       </nav>
       <div class="main-content">
-        <div>
-          <div class="container">
-            <div class="row align-items-center">
-              <div class="grid-container col-12 col-md-5 col-lg-6 order-md-2 order-xs-1">
-                <div class="grid-item"><img src="/img/genesis/md/0.png"></div>
-                <div class="grid-item"><img src="/img/genesis/md/1.png"></div>
-                <div class="grid-item"><img src="/img/genesis/md/2.png"></div>
-                <div class="grid-item"><img src="/img/guerrillaworms/md/0.png"></div>
-                <div class="grid-item"><img src="/img/guerrillaworms/md/1.png"></div>
-                <div class="grid-item"><img src="/img/guerrillaworms/md/2.png"></div>
-                <div class="grid-item"><img src="/img/littleworms/md/0.png"></div>
-                <div class="grid-item"><img src="/img/littleworms/md/1.png"></div>
-                <div class="grid-item"><img src="/img/littleworms/md/2.png"></div>
-                <div class="grid-item"><img src="/img/punkworms/md/0.gif"></div>
-                <div class="grid-item"><img src="/img/punkworms/md/1.png"></div>
-                <div class="grid-item"><img src="/img/punkworms/md/2.png"></div>
-              </div>
-              <div
-                class="col-12 col-md-7 col-lg-6 order-md-1 order-xs-2"
-                data-aos="fade-up"
-              >
-                <h1 class="text-center text-md-start mt-5 mt-md-0">
-                  <span>The MultiWorms NFT Collection</span>
-                </h1>
-                <p
-                  class="lead text-center text-md-start text-high-emphasis mb-4 mb-lg-8"
-                >
-                  <strong>3333 pixel-art style digital collectibles.</strong>
-                  Each is unique. Some are mean. Some are cool. Some are silly.
-                  All are Worms so... they're just weird.<br /><br />
-                  <strong
-                    >The first 1/1 NFT collection minted on MultiVAC.</strong
-                  >
-                </p>
-                </div>
-              </div>
+        <div class="row mb-5">
+          <div class="col col-lg-6 offset-lg-3">
+            <h1 class="mt-5 mb-5">FAQs</h1> 
+            <div class="mb-5">
+              <h5>Where do these Worms live?</h5> 
+              <p>We are extremely excited to say... the Worms live on the <a href="https://mtv.ac/">MultiVAC blockchain</a>! 
+                They are the very first 1/1 NFT collection on MultiVAC. And one of the first NFT collections in general on 
+                MultiVAC, after the MultiVAC Spaceship &amp; Battleship Collections, and the Asimov Hub NFTs.</p>
+            </div> 
+            <div class="mb-5">
+              <h5>How many Worms are in the collection?</h5> 
+              <p>There are 3333 Worms.</p>
+            </div> 
+            <div class="mb-5">
+              <h5>When was the collection minted?</h5> 
+              <p>The collection was minted on 12/28/2021.</p>
+            </div> 
+            <div class="mb-5">
+              <h5>How is rarity is calculated?</h5> 
+              <p>Rarity is calculated using the following process:</p> 
+                <ol>
+                  <li>Calcuate rarity for each attribute using: (1 / number of NFTs with attribute / 3333) * 100,000</li> 
+                  <li>Sum each attributes rarity for a Worm to get total rarity</li>
+                </ol> 
+              <p>Rarity rank is then determined with the following:</p> 
+                <ul>
+                  <li>Worms with the top 111 rarities: Legendary</li> 
+                  <li>Worms with rarities in 112 - 555: Epic</li> 
+                  <li>Worms with rarities in 556 - 1111: Rare</li> 
+                  <li>Worms with rarities in 1112 - 2222: Uncommon</li> 
+                  <li>Worms with rarities in 2223 - 3333: Common</li>
+                </ul>
             </div>
           </div>
         </div>
+      </div>
       <footer class="text-center text-lg-start bg-dark-2 text-high-emphasis">
         <section class="p-4">
           <div class="container text-center text-md-start mt-5">
