--- a/stats.html
+++ b/stats.html
@@ -36,45 +36,26 @@
         </div>
       </nav>
       <div class="main-content">
-        <div>
-          <div class="container">
-            <div class="row align-items-center">
-              <div class="grid-container col-12 col-md-5 col-lg-6 order-md-2 order-xs-1">
-                <div class="grid-item"><img src="/img/genesis/md/0.png"></div>
-                <div class="grid-item"><img src="/img/genesis/md/1.png"></div>
-                <div class="grid-item"><img src="/img/genesis/md/2.png"></div>
-                <div class="grid-item"><img src="/img/guerrillaworms/md/0.png"></div>
-                <div class="grid-item"><img src="/img/guerrillaworms/md/1.png"></div>
-                <div class="grid-item"><img src="/img/guerrillaworms/md/2.png"></div>
-                <div class="grid-item"><img src="/img/littleworms/md/0.png"></div>
-                <div class="grid-item"><img src="/img/littleworms/md/1.png"></div>
-                <div class="grid-item"><img src="/img/littleworms/md/2.png"></div>
-                <div class="grid-item"><img src="/img/punkworms/md/0.gif"></div>
-                <div class="grid-item"><img src="/img/punkworms/md/1.png"></div>
-                <div class="grid-item"><img src="/img/punkworms/md/2.png"></div>
-              </div>
-              <div
-                class="col-12 col-md-7 col-lg-6 order-md-1 order-xs-2"
-                data-aos="fade-up"
-              >
-                <h1 class="text-center text-md-start mt-5 mt-md-0">
-                  <span>The MultiWorms NFT Collection</span>
-                </h1>
-                <p
-                  class="lead text-center text-md-start text-high-emphasis mb-4 mb-lg-8"
-                >
-                  <strong>3333 pixel-art style digital collectibles.</strong>
-                  Each is unique. Some are mean. Some are cool. Some are silly.
-                  All are Worms so... they're just weird.<br /><br />
-                  <strong
-                    >The first 1/1 NFT collection minted on MultiVAC.</strong
-                  >
-                </p>
-                </div>
-              </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-12 align-text-center"><h3>MultiWorm Stats</h3></div>
+              <hr />
+            <div class="col-12 align-text-center"><h5>Genesis Worms</h5></div>
+            <div class="col-12">
+              <table class="align-items-center">
+                <tr class="align-text-center"">
+                  <td >Worms Minted:</td>
+                  <td>3333</td>
+                </tr>
+                <tr class="align-text-center"">
+                  <td >Worms Owners:</td>
+                  <td>363</td>
+                </tr>
+              </table>
             </div>
           </div>
         </div>
+      </div>
       <footer class="text-center text-lg-start bg-dark-2 text-high-emphasis">
         <section class="p-4">
           <div class="container text-center text-md-start mt-5">
