added nft page and updated some css

--- a/collections.html
+++ b/collections.html
@@ -34,11 +34,23 @@
         </div>
       </div>
     </nav>
+    <div class="pt-1 pb-1 bg-dark-2">
+      <div class="container">
+        <div class="row mb-1">
+          <div class="col-md-12">
+            <div class="col-md-12" style="text-align: center;">
+              ONLY STATIC CONTENT
+              <!-- <input type="text" class="form-control rounded-20 svelte-1d0o94b" placeholder="Search By Worm #" aria-label="search" aria-describedby="search" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');"> <span class="input-group-text rounded-20 hover-pointer svelte-1d0o94b" id="search"><i class="fas fa-search"></i></span> -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
       <div class="container-fluid mt-5 mb-5">
         <div class="text-center"><h1>Worm Collections</h1></div>
         <div class="row">
           <div class="col-lg-3 d-none d-lg-block">
-            <div class="card card-body-bg-dark shadow-sm">
+            <div class="card-body-bg-dark shadow-sm">
               <div class="card-body">
                 <div class="row mb-3">
                   <div class="col"><h5 class="card-title">Filter By</h5></div>
@@ -830,7 +842,7 @@
                 <div
                   class="card shadow rounded-20 card-body-bg-dark"
                 >
-                  <a href="/collections/genesis/token/0"
+                  <a href="/nft.html?collection=genesis&token=0"
                     ><img
                       src="/img/genesis/md/0.png"
                       class="card-img-top rounded-top-20"
