--- a/nft.html
+++ b/nft.html
@@ -48,45 +48,103 @@
         </div>
       </div>
       <div class="main-content">
-        <div>
-          <div class="container">
-            <div class="row align-items-center">
-              <div class="grid-container col-12 col-md-5 col-lg-6 order-md-2 order-xs-1">
-                <div class="grid-item"><img src="/img/genesis/md/0.png"></div>
-                <div class="grid-item"><img src="/img/genesis/md/1.png"></div>
-                <div class="grid-item"><img src="/img/genesis/md/2.png"></div>
-                <div class="grid-item"><img src="/img/guerrillaworms/md/0.png"></div>
-                <div class="grid-item"><img src="/img/guerrillaworms/md/1.png"></div>
-                <div class="grid-item"><img src="/img/guerrillaworms/md/2.png"></div>
-                <div class="grid-item"><img src="/img/littleworms/md/0.png"></div>
-                <div class="grid-item"><img src="/img/littleworms/md/1.png"></div>
-                <div class="grid-item"><img src="/img/littleworms/md/2.png"></div>
-                <div class="grid-item"><img src="/img/punkworms/md/0.gif"></div>
-                <div class="grid-item"><img src="/img/punkworms/md/1.png"></div>
-                <div class="grid-item"><img src="/img/punkworms/md/2.png"></div>
-              </div>
-              <div
-                class="col-12 col-md-7 col-lg-6 order-md-1 order-xs-2"
-                data-aos="fade-up"
-              >
-                <h1 class="text-center text-md-start mt-5 mt-md-0">
-                  <span>The MultiWorms NFT Collection</span>
-                </h1>
-                <p
-                  class="lead text-center text-md-start text-high-emphasis mb-4 mb-lg-8"
-                >
-                  <strong>3333 pixel-art style digital collectibles.</strong>
-                  Each is unique. Some are mean. Some are cool. Some are silly.
-                  All are Worms so... they're just weird.<br /><br />
-                  <strong
-                    >The first 1/1 NFT collection minted on MultiVAC.</strong
-                  >
-                </p>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 mb-md-4">
+              <img class="shadow rounded-20 svelte-f5ur28" alt="0" src="/img/genesis/lg/0.png" style="max-width: 100%;">
+            </div> 
+            <div class="col-lg-6 mt-5 mt-md-0">
+              <h1>Worm #0</h1> 
+            </div>
+          </div> 
+          <div class="row mt-5">
+            <div class="col">
+              <h1>Attributes</h1> 
+              <div class="row lead">
+                <div class="col-sm-2">
+                  <strong>Rarity Rank:</strong>
+                </div> 
+                <div class="col">
+                  <h5 class="mb-0">
+                    <span class="badge badge-Epic svelte-f5ur28">Epic</span>
+                  </h5>
+                </div>
+              </div> 
+              <div class="row lead">
+                <div class="col-sm-2">
+                  <strong>Background:</strong>
+                </div> 
+                <div class="col">
+                  1 of 7% with <span class="span-link">Lime</span> 
+                </div>
+              </div> 
+              <div class="row lead">
+                <div class="col-sm-2">
+                  <strong>Worm Type:</strong>
+                </div> 
+                <div class="col">
+                  1 of 13% with <span class="span-link">Red Wiggler</span> 
+                </div>
+              </div> 
+              <div class="row lead">
+                <div class="col-sm-2">
+                  <strong>Ripped:</strong></div> 
+                  <div class="col">
+                    1 of 75% that are <span class="span-link">Intact</span> 
+                  </div>
+                </div> 
+                <div class="row lead">
+                  <div class="col-sm-2">
+                    <strong>Eyewear:</strong>
+                  </div> 
+                  <div class="col">
+                    1 of 4% with <span class="span-link">Monacle</span> 
+                  </div>
+                </div> 
+                <div class="row lead">
+                  <div class="col-sm-2">
+                    <strong>Neck:</strong>
+                  </div> 
+                  <div class="col">
+                    1 of 20% with <span class="span-link">Silver Chain with Cross</span> 
+                  </div>
+                </div> 
+                <div class="row lead">
+                  <div class="col-sm-2">
+                    <strong>Hat:</strong>
+                  </div> 
+                  <div class="col">
+                    1 of 24% with <span class="span-link">Grey Baseball Backwards</span> 
+                  </div>
+                </div> 
+                <div class="row lead">
+                  <div class="col-sm-2">
+                    <strong>Body:</strong>
+                  </div> 
+                  <div class="col">
+                    1 of 90% with <span class="span-link">None</span> 
+                  </div>
+                </div> 
+                <div class="row lead">
+                  <div class="col-sm-2">
+                    <strong>Earring:</strong>
+                  </div> 
+                  <div class="col">
+                    1 of 80% with <span class="span-link">None</span> 
+                  </div>
+                </div> 
+                <div class="row lead">
+                  <div class="col-sm-2">
+                    <strong>Backpack:</strong>
+                  </div> 
+                  <div class="col">
+                    1 of 80% with <span class="span-link">None</span> 
+                  </div>
                 </div>
               </div>
-            </div>
+            </div> 
           </div>
-        </div>
+      </div>
       <footer class="text-center text-lg-start bg-dark-2 text-high-emphasis">
         <section class="p-4">
           <div class="container text-center text-md-start mt-5">
