--- a/faq.html
+++ b/faq.html
@@ -35,6 +35,18 @@
           </div>
         </div>
       </nav>
+      <div class="pt-1 pb-1 bg-dark-2">
+        <div class="container">
+          <div class="row mb-1">
+            <div class="col-md-12">
+              <div class="col-md-12" style="text-align: center;">
+                ONLY STATIC CONTENT
+                <!-- <input type="text" class="form-control rounded-20 svelte-1d0o94b" placeholder="Search By Worm #" aria-label="search" aria-describedby="search" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');"> <span class="input-group-text rounded-20 hover-pointer svelte-1d0o94b" id="search"><i class="fas fa-search"></i></span> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="main-content">
         <div class="row mb-5">
           <div class="col col-lg-6 offset-lg-3">
